--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -50,7 +50,6 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to the Container registry
-        if: github.event_name == 'push'
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -75,7 +74,7 @@ jobs:
         with:
           context: ${{ matrix.context }}
           file: ${{ matrix.file }}
-          push: ${{ github.event_name == 'push' }}
+          push: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) }}
           platforms: linux/amd64
           build-args: |
             ${{ matrix.id == 'app' && format('GOPRIVATE_ARG={0}', secrets.GOPRIVATE) || '' }}
@@ -84,5 +83,5 @@ jobs:
             ${{ matrix.id == 'docreader' && 'PLATFORM=linux/amd64' || '' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}-${{ matrix.id }}:buildcache
-          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LOWER }}-${{ matrix.id }}:buildcache,mode=max
+          cache-from: ${{ github.event_name == 'push' && format('type=registry,ref={0}/{1}-{2}:buildcache', env.REGISTRY, env.IMAGE_NAME_LOWER, matrix.id) || 'type=gha' }}
+          cache-to: ${{ github.event_name == 'push' && format('type=registry,ref={0}/{1}-{2}:buildcache,mode=max', env.REGISTRY, env.IMAGE_NAME_LOWER, matrix.id) || 'type=gha,mode=max' }}
